# smolagents-explore

./: .gitignore  LICENSE  README.md  pyproject.toml
basics/: basic-ollama.ipynb  telemetry.ipynb  web_crawler_vlm.ipynb
